# QuantForge-quantitative_search_framework

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  main.cpp
.plugins/sma_python/: manifest.json
src/forge/forge_engine/: forge.cpp  forge.hpp
src/forge/stores/: data_store.cpp  data_store.hpp
src/http/: readme.md
src/http/api/: CMakeLists.txt  stock_api.cpp  stock_api.hpp
src/http/cache/: CMakeLists.txt  network_cache.cpp  network_cache.hpp
src/http/client/: CMakeLists.txt  curl_easy.cpp  curl_easy.hpp  curl_global.cpp  curl_global.hpp  interface.hpp
src/http/error/: CMakeLists.txt  http_error.cpp  http_error.hpp
src/http/model/: CMakeLists.txt  model.cpp  model.hpp
src/http/provider/: CMakeLists.txt  polygon.cpp  polygon.hpp
src/plugins/abi/: abi.h
src/plugins/loaders/: interface.hpp  native_loader.cpp  native_loader.hpp  python_loader.cpp  python_loader.hpp
src/plugins/manager/: plugin_manager.cpp
src/plugins/manifest/: CMakeLists.txt  manifest.cpp  manifest.example.json  manifest.hpp  manifest.schema.json
src/simulators/back_test/: CMakeLists.txt  abi_converter.cpp  abi_converter.hpp  back_test_engine.cpp  back_test_engine.hpp  equity_calculator.cpp  equity_calculator.hpp  exchange.cpp  exchange.hpp  executor.cpp  executor.hpp  exit_order_book.cpp  exit_order_book.hpp  limit_order_book.cpp  limit_order_book.hpp  models.hpp  position_calculator.cpp  position_calculator.hpp  slippage_calculator.cpp  slippage_calculator.hpp  state.cpp  state.hpp
src/utils/: CMakeLists.txt  constants.hpp  logger.cpp  logger.hpp  max_heap.hpp  min_heap.hpp  mone_utils.cpp  money_utils.hpp  string_utils.cpp  string_utils.hpp  thread_pool.cpp  thread_pool.hpp
